@@ -3,7 +3,7 @@
 # This variant is used in the case where the subclass and subproperty
 # lattices have been precomputed by a transitive graph closure cache.
 # and only includes the minimum useful core rules with no axioms.
-# $Id: rdfs-fb-tgc-simple.rules,v 1.3 2003-08-25 20:59:25 der Exp $
+# $Id: rdfs-fb-tgc-simple.rules,v 1.4 2009-03-09 18:10:16 der Exp $
 #------------------------------------------------------------------
 
 #------------------------------------------------------------------
@@ -17,6 +17,7 @@
 #------------------------------------------------------------------
 
 [rdfs7b: (?a rdf:type rdfs:Class) -> (?a rdfs:subClassOf rdfs:Resource)] 
+[rdfs5b: (?a rdf:type rdf:Property) -> (?a rdfs:subPropertyOf ?a)] 
 
 [rdfs2:  (?p rdfs:domain ?c) -> [(?x rdf:type ?c) <- (?x ?p ?y)] ] 
 [rdfs3:  (?p rdfs:range ?c)  -> [(?y rdf:type ?c) <- (?x ?p ?y)] ] 
